# latent-diffusion

./: .coverage  .gitignore  LICENSE.md  Makefile  README.md  overview.md  pyproject.toml  scratch.py  test.py
configs/: mnist.yaml
configs/mnist/: mnist.yaml  mnist_no_bias.yaml
configs/ptect/: ptect.yaml
configs/ptect_uniform/: ptect.yaml
configs/qm9/: qm9.yaml  qm9_64.yaml
configs/scratch/: mnist.yaml  mnist_latent_unet.yaml  mnist_unet.yaml  mnist_unet_test.yaml  mnist_vae.yaml  mnist_vit.yaml  mnist_zerosnr.yaml
notebooks/: activation_magnitude.py  common_diffusion_noise_schedulers_are_flawed.py  dataset_mnist.py  dataset_pcmnist.py  dataset_ptect.py  dataset_qm9.py  diffusion.py  eval_mnist.py  eval_ptect.py  eval_ptect_uni.py  eval_qm9.py  eval_unet_mnist.py  eval_vae_mnist.py  models_unet.py  molecule_2d.py  scheduler_linear.py
notes/: config.md  model.md  scheduler.md  training.md
src/: configs.py  loaders.py  loggers.py  sampler.py  train_classifier.py  train_ddpm.py  train_vae.py  validate.py
src/datasets/: mnist.py  pcmnist.py  ptect.py  qm9.py
src/hooks/: forward.py
src/latent_diffusion/: __init__.py
src/models/: blocks.py  cosine_scheduler.py  discriminator.py  down.py  down_old.py  mid.py  schedulers.py  unet.py  up.py  vae.py  vit.py
src/schedulers/: linear.py
src/transforms/: latent.py
test/blocks/: test_attention.py  test_resnet.py
test/configs/: test_init_configs.py
test/down/: test_down.py  test_up.py
test/model/: test_unet.py
test/scheduler/: test_scheduler.py
tests/configs/: test_init_configs.py
(+7 files in other folders)
