[project]
name = "latent-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ErnstRoell", email = "ernstroell@gmail.com" }
]
requires-python = "==3.14.3"
dependencies = [
  "basedpyright>=1.38.2",
  "cairosvg>=2.8.2",
  "coverage>=7.13.5",
  "lightning>=2.6.1",
  "matplotlib>=3.10.8",
  "modelsummary>=1.1.7",
  "nbconvert[qtpdf,webpdf]>=7.17.0",
  "pandas>=3.0.1",
  "pydantic>=2.12.5",
  "pyqt6>=6.10.2",
  "rdkit>=2025.9.6",
  "scikit-image>=0.26.0",
  "seaborn>=0.13.2",
  "structlog>=25.5.0",
  "torch>=2.9.1",
  "torch-geometric>=2.7.0",
  "torchinfo>=1.8.0",
  "torchmetrics[image]>=1.8.2",
  "torchvision>=0.24.1",
]


[project.scripts]
latent-diffusion = "latent_diffusion:main"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]



[tool.pyright]
typeCheckingMode = "basic"
strict = ["strec"]
ignore = ["tests"]
venvPath = "."
venv = ".venv"


[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
